# GoIT

./: .gitignore  README.md  pyproject.toml
Module_8/: cs_1.py  cs_11_collections.py  cs_12_counter.py  cs_15_comprehensions.py  cs_17_datetime.py  cs_19_random_numbers.py  cs_1_datetime.py  cs_2.py  cs_20_decimal.py  cs_21_counter.py  cs_22_namedtuple.py  cs_23_defaultdict.py  cs_4.py  cs_7.py  cs_9.py  ex-4.py  ex_3.py  ex_5.py  ex_6.py  ex_7.py
module-2/: ex-1.py  ex-10.py  ex-11.py  ex-12.py  ex-13.py  ex-14.py  ex-15.py  ex-2.py  ex-3.py  ex-4.py  ex-5.py  ex-6.py  ex-7.py  ex-8.py  ex-9.py
module-3/: ex-11.py  ex-3.py  ex-6.py  ex-7.py  ex-8.py  ex-9.py
module-4/: code-sneppets4.py  code-sneppets5.py  code-snippet.py  code-snippets2.py  code-snippets3.py  ex-1.py  ex-10.py  ex-11.py  ex-12.py  ex-13.py  ex-2.py  ex-3.py  ex-5.py  ex-6.py  ex-8.py  ex-9.py  work_log.py
module-5/: code-snipper5.py  code-snippet.py  code-snippet6.py  code-snippet7.py  ex-1.py  ex-2.py  ex-4.py  ex-6.py
module_10/: info.txt
module_12/: info.txt
module_2/: ex-1.py  ex-2.py
module_3/: code_snippet1.py  cs_2.py  cs_5.py  cs_51.py  cs_8.py  ex_10.py  ex_11.py  ex_2.py  ex_5.py  info.txt
module_4/: ex_14.py  ex_4.py  ex_7.py  info.txt  work_log.py
module_5/: code_snipper10.py  code_snippet2.py  code_snippet4_2.py  code_snippet7.py  code_snippet9.py  cs_2.py  cs_21.py  cs_22.py  cs_23.py  cs_24.py  cs_3.py  cs_4.py  cs_5.py  ex_3.py  ex_6.py  ex_7.py  info.txt
module_6/: cs_1.2.py  cs_1.py  (+17 more)
python_web/02_home_work/: Dockerfile  README.md  README1.md  main.py  pyproject.toml
python_web/02_home_work/cli/: __init__.py  cli_classes.py
python_web/02_home_work/data/: addressbook.pkl
python_web/02_home_work/utils/: py_logger.py
python_web/06_home_work/: create_tables.py  fill_db.py  pyproject.toml  query.py
python_web/06_home_work/side_task/: connect.py  create_cities.py  fill_cities.py  query.py
python_web/07_home_work/: config.ini  db.py  fill_db.py  main.py  models.py  my_select.py  pyproject.toml  test.py
python_web/07_home_work/alembic/: env.py
python_web/07_home_work/alembic/versions/: 88722885005f_init.py
python_web/10_home_work/v2/hw_project/: db.sqlite3  pyproject.toml
python_web/10_home_work/v2/hw_project/hw_project/: settings.py
python_web/10_home_work/v2/hw_project/quotes/: forms.py  models.py  urls.py  views.py
python_web/10_home_work/v2/hw_project/quotes/migrations/: 0001_initial.py  0002_author_user_quote_user_tag_user_tag_tag_of_username.py
python_web/10_home_work/v2/hw_project/quotes/static/quotes/: style.css
python_web/10_home_work/v2/hw_project/quotes/templates/quotes/: base.html  index.html
python_web/10_home_work/v2/hw_project/quotes/templatetags/: extract.py
python_web/10_home_work/v2/hw_project/users/: forms.py  urls.py  views.py
python_web/10_home_work/v2/hw_project/users/templates/users/: login.html  signup.html
python_web/10_home_work/v2/hw_project/utils/: add_quotes_to_mongo.py  authors.json  migration.py
python_web/12_home_work/: READ.ME  main.py  pyproject.toml
python_web/12_home_work/src/database/: db.py  models.py
python_web/12_home_work/src/repository/: auth.py  contacts.py  users.py
python_web/12_home_work/src/routes/: auth.py  contacts.py
python_web/12_home_work/src/schemas/: users.py
python_web/12_home_work/src/services/: auth.py  contacts.py
(+603 files in other folders)
