[tool.poetry]
name = "hw-project"
version = "0.1.0"
description = ""
authors = ["Oleksandr Radzikhovskyi <A.Radzihovskiy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0.1"
bson = "^0.5.10"
pymongo = "^4.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
